--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ priority = "primary"
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.5.1"
 autopep8 = "^2.0.4"
+pytest = "^7.4.2"
 
 [build-system]
 requires = ["poetry-core"]
