--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "decorator-retry"
-version = "0.1.5"
+version = "0.1.6"
 description = ""
 authors = ["Yibo Mao <yibo.mao@genscript.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8"
+typing-extensions = "^4.11.0"
 
 
 [[tool.poetry.source]]
