--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "decorator-retry"
-version = "0.1.8"
-description = ""
+version = "0.1.9"
+description = "Retry functions and async functions"
 authors = ["Yibo Mao <yibo.mao@genscript.com>"]
 readme = "README.md"
 
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.8"
 typing-extensions = "^4.11.0"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.5.1"
+autopep8 = "^2.0.4"
+pytest = "^7.4.2"
+pytest-asyncio = "^0.23.7"
 
 [[tool.poetry.source]]
 name = "aliyun"
@@ -20,10 +25,6 @@ priority = "primary"
 name = "PyPI"
 priority = "primary"
 
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.5.1"
-autopep8 = "^2.0.4"
-pytest = "^7.4.2"
 
 [build-system]
 requires = ["poetry-core"]
